--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -16,7 +16,7 @@
         <div>
             Fecha Nacimiento: <input type="date" name="fecha_nacimiento" />
         </div>
-        <div Departamento: <select name="codigo_departamento">
+        <div> Departamento: <select name="codigo_departamento">
             <option value="05">Antioquia</option>
             <option value="11">Bogotá</option>
             <option value="76">Valle del Cauca</option>
