--- a/templates/hola.html
+++ b/templates/hola.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <h1>Hola Mundo!</h1>
+        <h1>Hola {{ nombre }}!</h1>
         <p>Soy una página HTML</p>
     </body>
 </html>
